--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,7 @@
             <ul class="list-group">
                 <li
                         class="list-group-item"
+                        [@listOne]
                         (click)="onDelete(item)"
                         *ngFor="let item of list">
                     {{ item }}
