--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
             <button class="btn btn-primary" (click)="onShrink()">Shrink!</button>
             <hr>
             <div style="width: 100px; height: 100px"
-                 [@divState]="state">
+                 [@divState]="state" (@divState.done)="animationDone($event)">
             </div>
             <br>
             <div style="width: 100px; height: 100px"
